# cudapro

./: .cuda_gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Unique.cpp  a.out  bench_flash  bench_qkv_rmsnorm.py  lesson00  lesson00_vector_add.cu  lesson01  lesson02  lesson03  lesson03_matrix_mul.cu  lesson04  lesson04_reduction.cu  lesson05  lesson05_softmax.cu  lesson06  lesson06_streams.cu  lesson07  lesson07_conv2d.cu  lesson08  lesson08_rmsnorm.cu  lesson09  lesson10  lesson10_flash_attention.cu  lesson11  lesson11_cublas.cu  lesson12  lesson12_flash_attention_v1.cu  lesson13  lesson13_flash_attention_v2.cu  lesson14  lesson14_paged_attention.cu  lesson15  lesson15_cublas_gemm.cu  lesson16  lesson16_tensor_gemm.cu  (+14 more)
benchmarks/: bench_flash_compare.cu  bench_qkv_rmsnorm.py
cmake/: CudaLessons.cmake
docs/: lesson16_README.md  lesson17_README.md
include/: qk_rmsnorm_epilogue_visitor.h
scripts/: bench_lesson17.sh  build.sh  configure.sh
src/: lesson01_matrix_add.cu  lesson02_matrix_transpose.cu  lesson09_attention.cu  lesson10_flash_attention.cu  lesson11_cublas.cu  lesson12_flash_attention_v1.cu  lesson13_flash_attention_v2.cu  lesson17_qkv_rmsnorm.cu  test02.cu
